substrate/frame/support/test/tests/pallet_ui/pallet_doc_arg_non_path.stderr
error: The `pallet_doc` received an unsupported argument. Supported format: `pallet_doc("PATH")`
  --> tests/pallet_ui/pallet_doc_arg_non_path.rs:20:1
   |
20 | #[pallet_doc(X)]
   | ^
